data/derived/sp14/progs/unify/prog4050.ml.out
Characters 0-1:
  x+y;;
  ^
Error: This expression has type float but an expression was expected of type
         int
